2011-09-05  MIYAMUKO Katsuyuki

	* (convert-from-psre): \A \z \W \w をサポート

	* (convert-from-psre): 不正な正規表現の場合に通知する
	例外のメッセージを改善

	* (do-scans): reg-starts, reg-ends が常に nil だった問題を修正

	* conditions.l: バイトコンパイルしたファイルがロードできなかった
	問題を修正

2011-09-03  MIYAMUKO Katsuyuki

	* (create-scanner): 不正な正規表現の場合は ppcre-syntax-error
	を投げるようにした

	* (ppcre-error, ppcre-invocation-error, ppcre-syntax-error): 追加

	* cl-ppcre との互換性のために以下の変数を定義
	- *property-resolver*
	- *regex-char-code-limit*
	- *use-bmh-matchers*
	- *optimize-char-classes*
	- *allow-quoting*
	- *allow-named-registers*

	* (regex-replace-all): replacement が単純な文字列なら
	substitute-string を呼ぶだけにして高速化

	* (quote-meta-chars): 実装した

	* (apply-replacement): \& \' \` \1 - \9 をサポート

2011-08-31  MIYAMUKO Katsuyuki

	* テストファイル置き場を変更
	tests => site-lisp/xl-ppcre/test

2011-08-30  MIYAMUKO Katsuyuki

	* (create-scanner): (?i) と (?-i) をサポート

	* (split): バグだらけだったのを直した

	* (make-register-group-vars): 関数が指定されていて
	マッチしなかった場合にエラーになっていたのを修正
	(ppcre:do-register-groups (word (#'parse-integer number))
          ("([a-z]+)|(\\d+)" "foo123")
          (princ (list word number)))

	* バインド変数名が nil の場合にキャプチャがずれていたのを修正
	(ppcre:register-groups-bind (nil second third fourth)
	  ("((a)|(b)|(c))()+" "abababc" :start 6)
	  (list second third fourth))

	* (tests/00_api.l) テストを追加

2011-08-29  MIYAMUKO Katsuyuki

	* (tests/00_api.l) lisp-unit のテストを追加
	実行方法
	- tests/00_api.l を開いて M-x run-tests
	- M-x run-tests-from して test.xl-ppcre を入力

	* psre-reader.l を取り込んで Perl 風の正規表現をサポート
	http://github.com/youz/reut/

	* (make-register-group-vars): バインド変数名が nil の場合に
	キャプチャがずれていたのを修正
	(ppcre:register-groups-bind (nil second third fourth)
	  ("((a)|(b)|(c))()+" "abababc" :start 6)
	  (list second third fourth))

2011-08-27  MIYAMUKO Katsuyuki

	* xl-ppcre 作成開始
